# Tic-Hask-Toe

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  TicHaskToe.cabal  flake.nix
assignments/: A1-1.md  A1-2.md  A1-3.md  A2-1.md  A2-2.md  A3-1.md  A3-2.md  A4-1.md  A4-2.md  A5-1.md  A5-2.md  test1.hs
exampledir/: EX1.hs  EX2.hs  EX3.hs  EX4.hs  EX5.hs  EX6.hs  EX7.hs
lecture_exercises/: expressions_and_types.hs
solutions/: A1.hs  A2.hs  A3.hs  A4.hs  A5.hs  Main.hs  Sandbox.hs  test1.hs
