cabal-version:      2.4
name:               TicHaskToe
version:            0.1.0.0
synopsis:           See README for more info
tested-with:        GHC==8.10.7

-- A longer description of the package.
-- description:
homepage:           https://github.com/gitpod-io/template-haskell

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Example
extra-source-files:
    .hlint.yaml
    CHANGELOG.md
    README.md

executable TicHaskToe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    A1
                    , A2
                    , A3
                    , A4
                    , A5

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , random

    hs-source-dirs:   solutions
    default-language: Haskell2010
