cabal-version:      2.4
name:               TicHaskToe
version:            0.1.0.0
synopsis:           See README for more info
tested-with:        GHC==8.10.7

description:        A guided Tic-Tac-Toe project, designed as a companion to the first part of EMURGO Academy's Haskell course.
homepage:           https://github.com/gitpod-io/template-haskell
license:            MIT
license-file:       LICENSE
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com

category:           Example
extra-source-files:
    .hlint.yaml
    CHANGELOG.md
    README.md

executable TicHaskToe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    A1
                    , A2
                    , A3
                    , A4
                    , A5
                    , Sandbox
                    , Num1
                  

    build-depends:
        base ^>=4.14.1.0
      , random

    hs-source-dirs:   solutions
    default-language: Haskell2010
